Remove initial local file loading.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,3 @@
 {
-    "extends": ["@reactway"],
-    "ignorePatterns": ["src/shared/locale/translations/translations.d.ts"]
+    "extends": ["@reactway"]
 }
