--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
         "@types/lodash.set": "^4.3.6",
         "@types/webpack-env": "^1.15.1",
         "eslint": "^6.8.0",
+        "i18next": "^19.3.3",
+        "prettier": "^1.19.1",
         "ts-node": "^8.7.0",
-        "typescript": "^3.8.3",
-        "prettier": "^1.19.1"
+        "typescript": "^3.8.3"
     },
     "peerDependencies": {
         "@types/webpack-env": "^1.15.1"
     },
     "dependencies": {
-        "i18next": "^19.3.3",
         "lodash.set": "^4.3.2",
         "tslib": "^1.11.1"
     }
